objects/Dealer_Utility_Pricing_File__c.object
<CustomObject>
    <description>Mapping of Dealer Name, Utility , State and the Leasing File name</description>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Utility Pricing Files</relationshipLabel>
        <relationshipName>Dealer_Utility_Pricing_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_File_Name__c</fullName>
        <description>It is the Pricing File name which should be sent to CPR(which in turn sends for ABC)</description>
        <label>Pricing File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <description>Case# 00543268 - This is formula field refereing to state code of utility code object - Arokia Nathan</description>
        <formula>TEXT(Utility_Code__r.State_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>It contains the State Code</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case# 00543268 - Unlike the text name of the utility, the encoded name is a unique value that does not change. We will need to capture the encoded name in the quote and match it up with the price file - Arokia Nathan</description>
        <label>Utility Code</label>
        <referenceTo>Utility_Code__c</referenceTo>
        <relationshipLabel>Dealer Utility Pricing Files</relationshipLabel>
        <relationshipName>Dealer_Utility_Pricing_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_Name__c</fullName>
        <description>Case# 00543268 - This is formula field refereing to utility name of utility code object - Arokia Nathan</description>
        <formula>Utility_Code__r.Utility_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <description>It contains Utility information</description>
        <label>Utility</label>
        <picklist>
            <picklistValues>
                <fullName>Anaheim Public Utilities Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azusa Light &amp; Water Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colton Public Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale Water &amp; Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imperial Irrigation District (IID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lompoc, City of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles Department of Water &amp; Power  (LADWP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modesto Irrigation District (MID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moreno Valley Utility (MVU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Gas and Electric Company (PG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riverside Utilities Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego Gas &amp; Electric (SDG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern California Edison (SCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turlock Irrigation District (TID)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unisource Energy Services (UES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii Electric Light Company (HELCO) (Big Island of Hawaii)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaiian Electric Company (HECO) (Oahu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maui Electric Co. (MECO) (Maui)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Hudson Gas &amp; Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated Edison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Island Power Authority (LIPA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York State Electric and Gas (NYSEG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange and Rockland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSEGLI (formerly Long Island Power Authority (LIPA))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlantic City Electric (Conectiv)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSE&amp;G (Public Service Electric and Gas Co.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tucson Electric Power (TEP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacramento Municipal Utility District (SMUD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Dealer Utility Pricing File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Utility_Code__c</columns>
        <columns>State__c</columns>
        <columns>Utility__c</columns>
        <columns>Pricing_File_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DUPF-{0000}</displayFormat>
        <label>Dealer Utility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Utility Pricing Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>